hopefully fixed the menu button being way too large

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position:absolute;
     left:5px;
     top:5px;
-    size:5%;
+    size:10px;
 }
 .menu-btn:hover {
     cursor:pointer;
